# AutoResolution

./: CMakeLists.txt  README.md  vcpkg.json
cmake/lib/: automaticGameFolderOutput.cmake  copyOutputs.cmake
cmake/ports/skse-mcp/: portfile.cmake  vcpkg.json
include/: Settings.h  Utils.h
src/: Settings.cpp  plugin.cpp
